[package]
name = "multisig-dao-wallet"
version = "0.1.0"
description = "Comprehensive Multisig DAO Wallet on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "multisig_dao_wallet"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token = "4.0.2"

